Fixed spacing

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -140,8 +140,12 @@ body{
   margin-top: -70px;
 }
 
-.features h4 {
-  margin-left: 20px;
+.buttons a {
+  margin: 5px;
+}
+
+.feature-desc h4 {
+  padding-left: 40px;
 }
 
 .footer {
